# demomcp

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  QUICK_START.md  README.md  TCP_PROXY_README.md  check_server.py  main.py  main_tcp.py  mcp_tcp_client.py  pyproject.toml  tcp_proxy.py  tcp_server.py  test_server.py  test_tcp_proxy.py  test_windows_setup.py
config/: default.yml
docs/: api_reference.md  getting_started.md
docs/example-context-docs/: mcp-ai-agent-architecture.md  mcp-ai-agent-dev-task.md  mcp-ai-agent-prd.md
scripts/: test_server.py
src/mcp_log_analyzer/: __init__.py  tcp_proxy.py
src/mcp_log_analyzer/api/: __init__.py  server.py
src/mcp_log_analyzer/config/: settings.py
src/mcp_log_analyzer/core/: __init__.py  config.py  models.py  state_manager.py
src/mcp_log_analyzer/mcp_server/: __init__.py  server.py
src/mcp_log_analyzer/mcp_server/models/: schemas.py
src/mcp_log_analyzer/mcp_server/prompts/: __init__.py  linux_testing_prompt.py  log_management_prompt.py  mcp_assets_overview_prompt.py  network_testing_prompt.py  process_monitoring_prompt.py  windows_testing_prompt.py
src/mcp_log_analyzer/mcp_server/resources/: __init__.py  linux_resources.py  logs_resources.py  network_resources.py  process_resources.py  windows_resources.py
src/mcp_log_analyzer/mcp_server/tools/: __init__.py  (+6 more)
src/mcp_log_analyzer/parsers/: __init__.py  base.py  csv_parser.py  etl_cached_parser.py  etl_large_file_parser.py  etl_parser.py  etl_windows_parser.py  evt_parser.py
tests/: test_base_parser.py  test_mcp_server.py  test_tool_utils.py  test_utils.py
