[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-log-analyzer"
version = "0.1.0"
description = "Model Context Protocol server for analyzing various types of logs"
readme = "README.md"
authors = [
    {name = "MCP Log Analyzer Team"}
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp[cli]>=1.9.2",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0",
    "pandas>=1.3.0",
    "pywin32>=300; sys_platform == 'win32'",  # For Windows Event Log access
    "psutil>=5.9.0",  # For process monitoring
]

[project.optional-dependencies]
etl = [
    "etl-parser>=1.0.1",  # For parsing Windows ETL files
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.910",
    "flake8>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 